# trading-view

./: .env  .env.example  .gitignore  README.md  app.py  db.py  index.html  migrate_sqlite.py  pyproject.toml  requirements.txt  scraper.py  start.sh  trading.db
agent/: __init__.py  graph.py  guardrails.py  llm.py  memory.py  rag.py  tools.py
api/: index.py
public/: index.html
