[project]
name = "trading-view"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "beautifulsoup4==4.12.3",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]>=3.3.0",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "app:app"
